--- a/ipython_notebook/Iris.ipynb
+++ b/ipython_notebook/Iris.ipynb
@@ -217,10 +217,7 @@
     {
      "data": {
       "text/plain": [
-       "SVC(C=1.0, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='rbf',\n",
-       "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "    tol=0.001, verbose=False)"
+       "SVC()"
       ]
      },
      "execution_count": 8,
@@ -267,38 +264,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#pickle the model to be used in django\n",
-    "pd.to_pickle(model,\"./ml_project/ml_models/pickles/iris_scv.pkl\")"
+    "pd.to_pickle(model,\"../iris/pickles/iris_scv.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "#unpickle model\n",
-    "model = pd.read_pickle(\"./ml_project/ml_models/pickles/iris_scv.pkl\")"
+    "model = pd.read_pickle(\"../iris/pickles/iris_scv.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter sp l : 2.1\n",
-      "Enter sp l : 2.1\n",
-      "Enter sp l : 4.3\n",
-      "Enter sp l : 5.4\n",
-      "['Iris-Virginica']\n"
+      "Enter sp l : 1.2\n",
+      "Enter sp l : 2.2\n",
+      "Enter sp l : 2.2\n",
+      "Enter sp l : 1.2\n",
+      "['Iris-Setosa']\n"
      ]
     }
    ],
@@ -315,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +326,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +352,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,6 +361,13 @@
     "#Finding mimimum values of columns from the dataframe\n",
     "df.min()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
