added bank_loan app

--- a/ipython_notebook/Iris.ipynb
+++ b/ipython_notebook/Iris.ipynb
@@ -264,17 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "#pickle the model to be used in django\n",
-    "pd.to_pickle(model,\"../iris/pickles/iris_scv.pkl\")"
+    "pd.to_pickle(model,\"../pickles/iris_scv.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,17 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter sp l : 1.2\n",
-      "Enter sp l : 2.2\n",
-      "Enter sp l : 2.2\n",
-      "Enter sp l : 1.2\n",
+      "Enter sp l : 2\n",
+      "Enter sp l : 2\n",
+      "Enter sp l : 2\n",
+      "Enter sp l : 2\n",
       "['Iris-Setosa']\n"
      ]
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,13 +361,6 @@
     "#Finding mimimum values of columns from the dataframe\n",
     "df.min()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
